# wzwznew

./: .env  .env.example  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  BRANCHING.md  CHANGELOG.md  CLAUDE.md  DIAGNOSE_REPORT.md  DailyLog.md  README.md  eslint.config.js  index.html  middleware.ts  package-lock.json  package.json  playwright.config.ts  preview-graphify.bat  pyproject.toml  skills-lock.json  tsconfig.app.json  tsconfig.json  vercel.json  vite.config.ts  vitest.server.config.ts
.claude/: launch.json  settings.json  settings.local.json
.codex/: hooks.json
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
.swarm/: hnsw.index  hnsw.metadata.json  memory.db  schema.sql
.understand-anything/: .understandignore
components/: raw-reveal-button.tsx
docs/: SECURITY_NOTES.md  analytics-tracking-plan.md  android-readiness.md  architecture-review.md  avatars.md  callflow.html  codebase-graph.md  codebase-map.md  crash-reporting-and-monitoring.md  finishing-a-development-branch.md  ios-push-readiness.md  landing-seo-copy-audit.md  mobile-native-qa-checklist.md  mobile-permissions-inventory.md  push-notifications-setup.md  secrets-hygiene-audit.md  security-staging-checklist.md  seo-audit-2026-06-27.md  seo-audit.md  supabase-access-boundary.md
e2e/: smoke.spec.ts
graphify-deploy/: graph.html  index.html  vercel.json
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
ios-playground/: README.md
memory/: retro-2026-06-24.json
mobile/: .gitignore  README.md  app.json  eas.json  package.json
public/: llms.txt  manifest.webmanifest  (+3 more)
(+599 files in other folders)
